--- a/CSharp8Preview/CSharp8Preview.csproj
+++ b/CSharp8Preview/CSharp8Preview.csproj
@@ -4,7 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
-    <NullableReferenceTypes>true</NullableReferenceTypes>
+    <!--<NullableReferenceTypes>true</NullableReferenceTypes>-->
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
 </Project>
